--- a/_engine/creator.scss
+++ b/_engine/creator.scss
@@ -180,11 +180,11 @@ h1 {
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('../font/icomoon.eot');
-	src:url('../font/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('../font/icomoon.ttf') format('truetype'),
-		url('../font/icomoon.woff') format('woff'),
-		url('../font/icomoon.svg#icomoon') format('svg');
+	src:url('assets/font/icomoon.eot');
+	src:url('assets/font/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('assets/font/icomoon.ttf') format('truetype'),
+		url('assets/font/icomoon.woff') format('woff'),
+		url('assets/font/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
