--- a/_engine/player.scss
+++ b/_engine/player.scss
@@ -24,11 +24,11 @@
 /* Printer glyph */
 @font-face {
 	font-family: 'icomoon';
-	src:url('../font/icomoon_engine.eot');
-	src:url('../font/icomoon_engine.eot?#iefix') format('embedded-opentype'),
-	url('../font/icomoon_engine.ttf') format('truetype'),
-	url('../font/icomoon_engine.woff') format('woff'),
-	url('../font/icomoon_engine.svg#icomoon') format('svg');
+	src:url('assets/font/icomoon_engine.eot');
+	src:url('assets/font/icomoon_engine.eot?#iefix') format('embedded-opentype'),
+	url('assets/font/icomoon_engine.ttf') format('truetype'),
+	url('assets/font/icomoon_engine.woff') format('woff'),
+	url('assets/font/icomoon_engine.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
