--- a/_engine/player.scss
+++ b/_engine/player.scss
@@ -1,3 +1,5 @@
+$green:#5BAC58;
+
 /* Standardize padding in all browsers */
 * {
 	outline: 0;
@@ -155,54 +157,71 @@ html, body {
 	border-left: solid 1px #999;
 	z-index: 5;
 
-	strong {
-		text-align: center;
-		display: inline-block;
-		width: 100%;
-		font-size: 20px;
-		margin-bottom: 10px;
-	}
-	div {
+	.clue{
 		font-size: 14px;
-		margin: 15px 4px;
-		em {
-			opacity: 0.5;
-		}
-	}
-	span.hintspot {
-		opacity: 0;
-		display: block;
-		transition: all 0.5s ease;
-		-moz-transition: all 0.5s ease;
-		-webkit-transition: all 0.5s ease;
-		font-style: italic;
-	}
-	div {
 		padding: 7px;
 		margin: 0px;
 		transition: all 0.1s ease;
 		-moz-transition: all 0.1s ease;
 		-webkit-transition: all 0.1s ease;
-		div.button {
-			position: relative;
-			background: #5BAC58;
-			color: #fff;
-			margin: 10px 0px;
-			margin-right: 4px;
-			padding: 3px;
-			border: solid 1px #578C54;
-			display: inline-block;
-		}
-		div.disabled {
+		em {
 			opacity: 0.5;
 		}
+		strong {
+			text-align: center;
+			display: inline-block;
+			width: 100%;
+			font-size: 20px;
+			margin-bottom: 10px;
+		}
+
+		.hintspot {
+			opacity: 0;
+			display: block;
+			transition: all 0.5s ease;
+			-moz-transition: all 0.5s ease;
+			-webkit-transition: all 0.5s ease;
+			font-style: italic;
+		}
+
+		&:nth-child(even) {
+			background: #eeeeee;
+		}
+
+		&.highlight{
+			background: #5163A6;
+			color: #fff;
+			.button{
+				background:$green;
+				border-color:$green;
+			}
+		}
 	}
-	div:nth-child(even) {
-		background: #eeeeee;
+
+}
+
+
+.button{
+	position: relative;
+	color: #fff;
+	margin: 10px 0px;
+	margin-right: 4px;
+	padding: 4px 8px;
+	display: inline-block;
+	background: #C5C5C5;
+	border:0;
+
+	&.disabled{
+		opacity: 0.5;
 	}
-	div.highlight {
-		background: #5163A6;
-		color: #fff;
+
+	&.submit{
+		background: $green;
+	}
+
+	&.cancel{
+		background: white;
+		color:#333;
 	}
 }
 
@@ -234,12 +253,8 @@ input {
 	position: fixed;
 	left: 10px;
 	bottom: 10px;
-	border: solid 1px #333;
-	background: #111f2c;
-	color: #fff;
 	font-size: 14px;
 	margin-top: 5px;
-	padding: 3px;
 }
 
 #checkBtn.done {
@@ -295,13 +310,22 @@ input {
 	z-index: 10000;
 	box-shadow: 0px 0px 5px #000;
 	text-align: center;
-
 	opacity: 0;
 	display: none;
 
-	input {
-		margin: 10px;
-		padding: 3px;
+	.button {
+		margin: 20px 10px 10px;
+		padding: 8px;
+
+		&.cancel{
+			border:white;
+			border-bottom: 1px solid #C4C4C4;
+			padding: 0px;
+		}
+		&.submit{
+			background:$green;
+			color:white
+		}
 	}
 }
 
