--- a/player.scss
+++ b/player.scss
@@ -66,12 +66,13 @@ html, body {
 		opacity:0;
 		filter:alpha(opacity=0);
 		position: absolute;
+		color: transparent;
 		top:  0px;
 		left:  0px;
 		width: 100px;
 		height: 100px;
 		display: block;
-		font-size: 0px;
+		font-size: 16px;
 		margin: 40px;
 	}
 }
