--- a/src/player.scss
+++ b/src/player.scss
@@ -222,7 +222,6 @@ html, body {
 	font-size: 19px;
 	font-family: 'Delius Unicase';
 	text-align: center;
-	text-transform: uppercase;
 	background: #fff;
 
 	margin: 0;
@@ -397,6 +396,20 @@ input {
 	margin-top:9px;
 	z-index: 1;
 	text-align: right;
+}
+
+.numberlabel_left {
+	color: #333;
+	font-size: 10px;
+	position: absolute;
+	pointer-events: none;
+	display: block;
+	width: 25px;
+	margin: 0px;
+	margin-top:9px;
+	margin-left: 3px;
+	z-index: 1;
+	text-align: left;
 }
 
 #backgroundcover {
