slightly modified letter background colors to increase contrast between current letter and highlighted word

--- a/src/player.scss
+++ b/src/player.scss
@@ -232,10 +232,10 @@ html, body {
 
 .letter.highlight {
 	border: solid 1px #6E7DA3;
-	background: #E2EAFF;
+	background: #E5F3FF;
 }
 .letter.focus {
-	background: #AEC4FF;
+	background: #AECEFF;
 }
 
 #controls {
