--- a/src/scoreScreen.scss
+++ b/src/scoreScreen.scss
@@ -33,8 +33,32 @@ $lightgreen:#6BBC68;
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.icon-zoomout:before {
-	content: "\e988";
+.icon-zoomout {
+	font-size: 20px;
+	color: #999;
+	position: absolute;
+	right: 210px;
+	top: 10px;
+	z-index: 6;
+
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	transition: color 0.2s ease;
+
+	cursor: pointer;
+
+	&:hover {
+		color: #444;
+	}
+	&:before {
+		content: "\e988";
+	}
 }
 
 html, body {
@@ -68,77 +92,19 @@ html, body {
 	overflow: hidden;
 }
 
-.header {
-	position: fixed;
-	top: 0;
-	z-index: 5;
-	width: 100%;
-	height: 60px;
-	background: #333333;
-	color: #fff;
+#bottomOptions {
+	position: absolute;
+	left: 10px;
+	bottom: 0px;
+	z-index: 100;
+	font-size: 14px;
+	background: black;
+	color: white;
+	padding: 3px;
 
-	border-bottom: solid 1px #333;
-
-	.logo {
-		display: block;
-		background: url(assets/materialogo.png) no-repeat;
-		width: 60px;
-		height: 50px;
-		float: left;
-		margin-left: 17px;
-		margin-top: 16px;
-	}
-
-	h1 {
-		line-height: 65px;
-		width: 77%;
-		height: 60px;
-		margin: 0;
-		margin-left: 83px;
-		padding: 0;
-		position: absolute;
-		overflow: hidden;
-		font-size: 28px;
-		font-family: 'Roboto Slab';
-		font-weight: 300;
-		span {
-			display: inline-block;
-			line-height: normal;
-			vertical-align: middle;
-		}
-	}
-	.icon-print, .icon-zoomin, .icon-zoomout {
-		font-size: 20px;
-		color: #999;
-		position: absolute;
-		right: 210px;
-
-		font-family: 'icomoon';
-		speak: none;
-		font-style: normal;
-		font-weight: normal;
-		font-variant: normal;
-		text-transform: none;
-		line-height: 1;
-		-webkit-font-smoothing: antialiased;
-		transition: color 0.2s ease;
-
-		cursor: pointer;
-
-		&:hover {
-			color: #444;
-		}
-	}
-	.icon-zoomout {
-		top: 70px;
-	}
-
-	.right {
-		float: right;
-		margin-right: 25px;
-		margin-top: 14px;
-		font-size: 14px;
-	}
+	transition: height 1s, transform 1s, ease;
+	-webkit-transition: height 1s, -webkit-transform 1s, ease;
+	-moz-transition: height 1s, -moz-transform 1s, ease;
 
 	label.checktoggle {
 		display: inline-block;
@@ -242,7 +208,7 @@ html, body {
 	display: block;
 	position: absolute;
 	right: 0px;
-	top: 61px;
+	top: 0px;
 	bottom: 0px;
 	width: 200px;
 	background: #fff;
@@ -305,7 +271,7 @@ input {
 
 #movable-container {
 	position: fixed;
-	top: 70px;
+	top: 10px;
 	left: 10px;
 	right: 210px;
 	bottom: 10px;
