#9 Preliminary support for screen readers with the clue list is moving along.

--- a/src/player.scss
+++ b/src/player.scss
@@ -525,3 +525,14 @@ input {
 	display: inline-block;
 	margin-right: 20px;
 }
+
+.reader-instructions {
+	position: absolute;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+}
