--- a/src/player.scss
+++ b/src/player.scss
@@ -432,7 +432,7 @@ input {
 	z-index: 10000;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 	text-align: center;
-	opacity: 0;
+	display: none;
 	z-index: -5;
 
 	.button {
@@ -451,7 +451,7 @@ input {
 	}
 
 	&.show {
-		opacity: 1;
+		display: block;
 		z-index: 10000;
 	}
 }
