--- a/src/player.scss
+++ b/src/player.scss
@@ -536,3 +536,15 @@ input {
 	overflow: hidden;
 	clip: rect(0 0 0 0);
 }
+
+.invisible-until-focused {
+	opacity: 0;
+	position: absolute;
+	right: 50%;
+	top: 70px;
+	text-align: center;
+	display: inline-block;
+}
+.invisible-until-focused:focus {
+	opacity: 1;
+}
